Fix Layer Filter and Add Tag menues from being closed when AltGr is pressed

QMenu has a spcial handler for Alt key to handle &-style mnemonics,
so we need to explicitly disable that for our custom menues that
have input boxes inside.

BUG:468566